@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - Add PluginRemover for easy disabling of plugins
+
 0.045     2013-06-06 15:41:29 America/New_York
 
     - Add 'no_minimum_perl' parameter
